ecmascript/parser/tests/test262-error-references/fail/8262e85f06cb459c.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/8262e85f06cb459c.js:1:10
  |
1 | new f(....g);
  |          ^

